--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 {{> svg-sprite/svg-sprite}}
-<header>
-
-</header>
+<!--<header>-->
+    {{> header/header}}
+<!--</header>-->
 <main>
 
 </main>
