--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Bino</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css"/>
-</head>
+{{> head/head}}
 <body>
 {{> svg-sprite/svg-sprite}}
 <header>
 
 </header>
-<main>
+<div class="free-start">
+    <div class="free-start__container">
+        <div class="wrap_respond">
+            <div class="free-start__content">
+                <h4>
+                    Let's Get Started Now. <span>It's FREE!</span>
+                </h4>
+                <p>
+                    30 day free trial. Free plan allows up to 2 projects. Pay if you need more. Cancel anytime. No catches.
+                </p>
+            </div>
+            <div class="free-start__btn">
+                <a href="#" class="btn">
+                    start free trial
+                </a>
+                <div class="btn_anim">
 
-</main>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <footer>
-    <p>lkfjglfdkgmklfdmg</p>
     {{> footer/footer}}
-    {{> blya}}
 </footer>
 </body>
 </html>
