--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Bino</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css"/>
+    {{> footer/footer}}
 </head>
 <body>
 {{> svg-sprite/svg-sprite}}
@@ -16,7 +12,7 @@
 
 </main>
 <footer>
-    <p>lkfjglfdkgmklfdmg</p>
+
     {{> footer/footer}}
     {{> blya}}
 </footer>
