--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,38 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
+
 {{> head/head}}
 <body>
-{{> svg-sprite/svg-sprite}}
-<header>
-    <!--<header>-->
-    {{> header/header}}
-    <!--</header>-->
-</header>
-<div class="free-start">
-    <div class="free-start__container">
-        <div class="free-start__content">
-            <h4>
-                Let's Get Started Now. <span>It's FREE!</span>
-            </h4>
-            <p>
-                30 day free trial. Free plan allows up to 2 projects. Pay if you need more. Cancel anytime. No catches.
-            </p>
-        </div>
-        <div class="free-start__btn">
-            <a href="#" class="btn">
-                start free trial
-            </a>
-            <div class="btn_anim">
 
+<header>
+
+</header>
+
+<!--<div class="wpapper">-->
+<div class="wrapper">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 title">Центр надання адміністративних послуг</div>
+    </div>
+    <div class="row list">
+        <p class="list__title">Виберіть категорію</p>
+        <div class="row list-block">
+            <div class="col-sm-3 list-block__cell">
+                <img src="../img/book_1.png" alt="" class="list-block__pic">
+                <p class="list-block__text">Автотранспорт</p>
+            </div>
+            <div class="col-sm-3 list-block__cell">
+                <img src="../img/house.png" alt="" class="list-block__pic">
+                <p class="list-block__text">Громадянство</p>
+            </div>
+            <div class="col-sm-3 list-block__cell">
+                <img src="../img/bag.png" alt="" class="list-block__pic">
+                <p class="list-block__text">Автотранспорт</p>
+            </div>
+            <div class="col-sm-3 list-block__cell">
+                <img src="../img/bird.png" alt="" class="list-block__pic">
+                <p class="list-block__text">Автотранспорт</p>
+            </div>
+        </div>
+        <div class="row list-block">
+            <div class="col-sm-3 list-block__cell">
+                <img src="../img/pepople.png" alt="" class="list-block__pic">
+                <p class="list-block__text">Автотранспорт</p>
+            </div>
+            <div class="col-sm-3 list-block__cell">
+                <img src="../img/rice.png" alt="" class="list-block__pic">
+                <p class="list-block__text">Автотранспорт</p>
+            </div>
+            <div class="col-sm-3 list-block__cell">
+                <img src="../img/book_2.png" alt="" class="list-block__pic">
+                <p class="list-block__text">Громадянство</p>
+            </div>
+            <div class="col-sm-3 list-block__cell">
+                <img src="../img/book_3.png" alt="" class="list-block__pic">
+                <p class="list-block__text">Автотранспорт</p>
             </div>
         </div>
     </div>
 </div>
-
+</div>
+<!--<img src="../img/book.png" alt="">-->
+<!--</div>-->
 <footer>
 
-    {{> footer/footer}}
+
 </footer>
 </body>
 </html>
